--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = {extras = ["all"], version = "^0.109.0"}
 uvicorn = {extras = ["standard"], version = "^0.26.0"}
 sqlalchemy = "^2.0.25"
 psycopg2-binary = "^2.9.9"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
