--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,15 @@ uvicorn = {extras = ["standard"], version = "^0.26.0"}
 sqlalchemy = "^2.0.25"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.0"
+httpx = "^0.26.0"
+pytest = "^7.4.4"
+faker = "^22.5.1"
+[tool.pytest.ini_options]
+filterwarnings = [
+    "ignore::UserWarning",
+    # note the use of single quote below to denote "raw" strings in TOML
+    'ignore::DeprecationWarning',
+]
 
 
 [build-system]
