--- a/example.env
+++ b/example.env
@@ -1,1 +1,2 @@
 SQLALCHEMY_DATABASE_URL = "postgresql://menu_db_admin:menu_db_admin@localhost:5432/menu_db"
+TEST_DB_URL = "postgresql://menu_db_admin:menu_db_admin@localhost:5432/menu_test_db"
