--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ httpx = "^0.26.0"
 pytest = "^7.4.4"
 faker = "^22.5.1"
 [tool.pytest.ini_options]
+testpaths = [
+    "tests"
+]
 filterwarnings = [
     "ignore::UserWarning",
     # note the use of single quote below to denote "raw" strings in TOML
