--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-SQLALCHEMY_DATABASE_URL = "postgresql://menu_db_admin:menu_db_admin@localhost:15432/menu_db"
+POSTGRES_DB=menu_db
+POSTGRES_USER=menu_db_admin
+POSTGRES_PASSWORD=menu_db_admin
+POSTGRES_SERVER=db
+POSTGRES_PORT=5432
