--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,21 +7,25 @@ services:
     volumes:
       - .:/app
     ports:
-      - 8008:8000
-    environment:
-      - SQLALCHEMY_DATABASE_URL=postgresql://menu_db_admin:menu_db_admin@db:5432/menu_db
+      - 8000:8000
+    env_file:
+      - .env
     depends_on:
-      - db
+      db:
+        condition: service_healthy
   db:
     image: postgres:15.1-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     expose:
       - 5432
-    environment:
-      POSTGRES_DB: menu_db
-      POSTGRES_USER: menu_db_admin
-      POSTGRES_PASSWORD: menu_db_admin
+    env_file:
+      - .env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
