--- a/.env_compose
+++ b/.env_compose
@@ -1,5 +1,5 @@
 POSTGRES_USER=menu_db_admin
 POSTGRES_PASSWORD=menu_db_admin
-POSTGRES_SERVER=localhost
-POSTGRES_PORT=15432
+POSTGRES_SERVER=db
+POSTGRES_PORT=5432
 POSTGRES_DB=menu_db
