--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - 8000:8000
     env_file:
-      - .env
+      - .env_compose
     depends_on:
       db:
         condition: service_healthy
@@ -19,7 +19,7 @@ services:
     expose:
       - 5432
     env_file:
-      - .env
+      - .env_compose
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
