--- a/local.yaml
+++ b/local.yaml
@@ -4,15 +4,12 @@ services:
   db:
     image: postgres:15.1-alpine
     volumes:
-      - postgres_test_data:/var/lib/postgresql/data/
+      - postgres_local_test_data:/var/lib/postgresql/data/
     expose:
       - 5432
     ports:
       - "15432:5432"
-    environment:
-      POSTGRES_DB: menu_db
-      POSTGRES_USER: menu_db_admin
-      POSTGRES_PASSWORD: menu_db_admin
+    env_file: local.env
 
 volumes:
-  postgres_test_data:
+  postgres_local_test_data:
