--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.0"
 httpx = "^0.26.0"
 pytest = "^7.4.4"
 faker = "^22.5.1"
+pre-commit = "^3.6.0"
 [tool.pytest.ini_options]
 testpaths = [
     "tests"
