first redis commit

--- a/local.env
+++ b/local.env
@@ -3,3 +3,7 @@ POSTGRES_USER=menu_db_admin
 POSTGRES_PASSWORD=menu_db_admin
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=15432
+REDIS_USER=redis_user
+REDIS_PASSWORD=redis_password
+REDIS_HOST=localhost
+REDIS_PORT=6379
