--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ httpx = "^0.26.0"
 pytest = "^7.4.4"
 faker = "^22.5.1"
 pre-commit = "^3.6.0"
+redis = {extras = ["hiredis"], version = "^5.0.1"}
+types-redis = "^4.6.0.20240106"
+stubs = "^1.0.0"
 [tool.pytest.ini_options]
 testpaths = [
     "tests"
