--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,31 @@
 annotated-types==0.6.0
 anyio==4.2.0
 certifi==2023.11.17
+cfgv==3.4.0
 click==8.1.7
+distlib==0.3.8
 dnspython==2.4.2
 email-validator==2.1.0.post1
 Faker==22.5.1
 fastapi==0.109.0
+filelock==3.13.1
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.2
 httptools==0.6.1
 httpx==0.26.0
+identify==2.5.33
 idna==3.6
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.3
+nodeenv==1.8.0
 orjson==3.9.10
 packaging==23.2
+platformdirs==4.2.0
 pluggy==1.4.0
+pre-commit==3.6.0
 psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic-extra-types==2.4.1
@@ -29,6 +36,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+redis==5.0.1
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.25
@@ -37,5 +45,6 @@ typing_extensions==4.9.0
 ujson==5.9.0
 uvicorn==0.26.0
 uvloop==0.19.0
+virtualenv==20.25.0
 watchfiles==0.21.0
 websockets==12.0
