--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pre-commit = "^3.6.0"
 redis = {extras = ["hiredis"], version = "^5.0.1"}
 types-redis = "^4.6.0.20240106"
 stubs = "^1.0.0"
+loguru = "^0.7.2"
 [tool.pytest.ini_options]
 testpaths = [
     "tests"
