--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ POSTGRES_PASSWORD=menu_db_admin
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=15432
 POSTGRES_DB=menu_db
+REDIS_HOST=localhost
+REDIS_PORT=16379
