--- a/.env_test
+++ b/.env_test
@@ -3,3 +3,5 @@ POSTGRES_PASSWORD=menu_db_admin
 POSTGRES_SERVER=test_db
 POSTGRES_PORT=5432
 POSTGRES_DB=menu_test_db
+REDIS_HOST=test_redis
+REDIS_PORT=6379
