--- a/docker-compose-tests.yaml
+++ b/docker-compose-tests.yaml
@@ -31,6 +31,23 @@ services:
     depends_on:
       test_db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  test_redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    volumes:
+      - test_redis_data:/data
+    expose:
+      - 6379
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      interval: 1s
+      timeout: 3s
+      retries: 5
 
 volumes:
   test_postgres_data:
+  test_redis_data:
