--- a/local.yaml
+++ b/local.yaml
@@ -9,7 +9,7 @@ services:
       - 5432
     ports:
       - "15432:5432"
-    env_file: local.env
+    env_file: .env
 
   redis:
     image: redis:latest
@@ -20,9 +20,7 @@ services:
     expose:
       - 6379
     ports:
-      - "6379:6379"
-    env_file:
-      - local.env
+      - "16379:6379"
     healthcheck:
       test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
       interval: 1s
