add H301 ignore to flake8 in pre-commit, readme update

--- a/docker-compose-tests.yaml
+++ b/docker-compose-tests.yaml
@@ -31,7 +31,7 @@ services:
     depends_on:
       test_db:
         condition: service_healthy
-      redis:
+      test_redis:
         condition: service_healthy
 
   test_redis:
