add parsing from xlsx file, initial steps with async in menu router

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ POSTGRES_PORT=5432
 POSTGRES_DB=menu_db
 REDIS_HOST=localhost
 REDIS_PORT=16379
+SHEETS_API_KEY=AIzaSyBRXu7-B_gCPJsqi1QmVPRNS-RbKCqztfY
+SHEETS_ID=1qwfh3VU31kEHto8Los5TxuAVUSyh5Un1
