--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ types-redis = "^4.6.0.20240106"
 stubs = "^1.0.0"
 loguru = "^0.7.2"
 fastapi = {extras = ["all"], version = "^0.109.2"}
-sqlalchemy = "^2.0.25"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
 google-api-python-client = "^2.116.0"
 openpyxl = "^3.1.2"
+asyncpg = "^0.29.0"
 [tool.pytest.ini_options]
 testpaths = [
     "tests"
