--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
 google-api-python-client = "^2.116.0"
 openpyxl = "^3.1.2"
 asyncpg = "^0.29.0"
+greenlet = "^3.0.3"
 [tool.pytest.ini_options]
 testpaths = [
     "tests"
