--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,31 @@
 annotated-types==0.6.0
 anyio==4.2.0
+async-timeout==4.0.3
+asyncpg==0.29.0
+cachetools==5.3.2
 certifi==2023.11.17
+cffi==1.16.0
 cfgv==3.4.0
+charset-normalizer==3.3.2
 click==8.1.7
+cryptography==42.0.2
 distlib==0.3.8
-dnspython==2.4.2
+dnspython==2.5.0
 email-validator==2.1.0.post1
+et-xmlfile==1.1.0
 Faker==22.5.1
-fastapi==0.109.0
+fastapi==0.109.2
 filelock==3.13.1
+google-api-core==2.17.0
+google-api-python-client==2.116.0
+google-auth==2.27.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.62.0
 greenlet==3.0.3
 h11==0.14.0
+hiredis==2.3.2
 httpcore==1.0.2
+httplib2==0.22.0
 httptools==0.6.1
 httpx==0.26.0
 identify==2.5.33
@@ -19,30 +33,44 @@ idna==3.6
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
-MarkupSafe==2.1.3
+loguru==0.7.2
+MarkupSafe==2.1.5
 nodeenv==1.8.0
-orjson==3.9.10
+openpyxl==3.1.2
+orjson==3.9.13
 packaging==23.2
 platformdirs==4.2.0
 pluggy==1.4.0
 pre-commit==3.6.0
+protobuf==4.25.2
 psycopg2-binary==2.9.9
-pydantic==2.5.3
-pydantic-extra-types==2.4.1
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.6.1
+pydantic-extra-types==2.5.0
 pydantic-settings==2.1.0
-pydantic_core==2.14.6
+pydantic_core==2.16.2
+pyparsing==3.1.1
 pytest==7.4.4
 python-dateutil==2.8.2
 python-dotenv==1.0.0
-python-multipart==0.0.6
+python-multipart==0.0.7
 PyYAML==6.0.1
 redis==5.0.1
+requests==2.31.0
+rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.25
-starlette==0.35.1
+starlette==0.36.3
+stubs==1.0.0
+types-pyOpenSSL==24.0.0.20240130
+types-redis==4.6.0.20240106
 typing_extensions==4.9.0
 ujson==5.9.0
+uritemplate==4.1.1
+urllib3==2.2.0
 uvicorn==0.26.0
 uvloop==0.19.0
 virtualenv==20.25.0
