--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ httpx = "^0.26.0"
 pytest = "^7.4.4"
 faker = "^22.5.1"
 pre-commit = "^3.6.0"
-redis = {extras = ["hiredis"], version = "^5.0.1"}
 types-redis = "^4.6.0.20240106"
 stubs = "^1.0.0"
 loguru = "^0.7.2"
@@ -25,6 +24,8 @@ google-api-python-client = "^2.116.0"
 openpyxl = "^3.1.2"
 asyncpg = "^0.29.0"
 greenlet = "^3.0.3"
+redis = "^5.0.1"
+pytest-asyncio = "^0.23.5"
 [tool.pytest.ini_options]
 testpaths = [
     "tests"
