--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 POSTGRES_USER=menu_db_admin
 POSTGRES_PASSWORD=menu_db_admin
 POSTGRES_SERVER=localhost
-POSTGRES_PORT=15432
+POSTGRES_PORT=5432
 POSTGRES_DB=menu_db
 REDIS_HOST=localhost
-REDIS_PORT=16379
+REDIS_PORT=6379
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PASSWORD=rmqpassword
+RABBITMQ_PORT=5672
+RABBITMQ_USER=rmquser
+CELERY_STATUS=true
