--- a/.env_compose
+++ b/.env_compose
@@ -5,3 +5,8 @@ POSTGRES_PORT=5432
 POSTGRES_DB=menu_db
 REDIS_HOST=redis
 REDIS_PORT=6379
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PASSWORD=rmqpassword
+RABBITMQ_PORT=5672
+RABBITMQ_USER=rmquser
+CELERY_STATUS=true
