--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ asyncpg = "^0.29.0"
 greenlet = "^3.0.3"
 redis = "^5.0.1"
 pytest-asyncio = "^0.23.5"
+celery = "^5.3.6"
+flower = "^2.0.1"
+rabbitmq = "^0.2.0"
 [tool.pytest.ini_options]
 testpaths = [
     "tests"
