--- a/local.yaml
+++ b/local.yaml
@@ -44,19 +44,19 @@ services:
       timeout: 30s
       retries: 5
 
-  celery:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    env_file:
-      - .env
-    container_name: celery
-    restart: always
-    command: ["celery", "--app=app.config.tasks:celery", "worker", "-l", "INFO"]
-    depends_on:
-      - db
-      - redis
-      - rabbitmq
+  # celery:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   env_file:
+  #     - .env
+  #   container_name: celery
+  #   restart: always
+  #   command: ["celery", "--app=app.config.tasks:app", "worker", "-l", "INFO"]
+  #   depends_on:
+  #     - db
+  #     - redis
+  #     - rabbitmq
 
 
 volumes:
