--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
 
   db:
     image: postgres:15.1-alpine
@@ -51,7 +53,7 @@ services:
       - .env_compose
     container_name: celery
     restart: always
-    command: ["celery", "--app=app.config.tasks:celery", "worker", "-l", "INFO"]
+    command: ["celery", "--app=app.celery.tasks:app", "worker", "-l", "INFO"]
     depends_on:
       - web
 
@@ -75,3 +77,4 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  rabbit_data:
