--- a/local.yaml
+++ b/local.yaml
@@ -3,6 +3,8 @@ version: '3'
 services:
   db:
     image: postgres:15.1-alpine
+    networks:
+      - ylab_menu_network
     volumes:
       - postgres_local_test_data:/var/lib/postgresql/data/
     expose:
@@ -15,6 +17,8 @@ services:
     image: redis:latest
     container_name: redis
     restart: always
+    networks:
+      - ylab_menu_network
     volumes:
       - redis_local_test_data:/data
     expose:
@@ -32,6 +36,8 @@ services:
     hostname: rabbitmq
     restart: always
     container_name: rabbitmq
+    networks:
+      - ylab_menu_network
     volumes:
       - rabbit_local_test_data:/var/lib/rabbitmq
     env_file:
@@ -45,21 +51,28 @@ services:
       retries: 5
 
   # celery:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   env_file:
-  #     - .env
-  #   container_name: celery
-  #   restart: always
-  #   command: ["celery", "--app=app.config.tasks:app", "worker", "-l", "INFO"]
-  #   depends_on:
-  #     - db
-  #     - redis
-  #     - rabbitmq
+    # build:
+      # context: .
+      # dockerfile: Dockerfile
+    # networks:
+      # - ylab_menu_network
+    # env_file:
+      # - .env
+    # container_name: celery
+    # restart: always
+    # command: ["celery", "--app=app.celery.tasks:app", "worker", "-l", "INFO"]
+    # depends_on:
+      # - db
+      # - redis
+      # - rabbitmq
 
-
+networks:
+  ylab_menu_network:
+    name: ylab_menu_network
 volumes:
   postgres_local_test_data:
+    name: postgres_local_test_data
   redis_local_test_data:
+    name: redis_local_test_data
   rabbit_local_test_data:
+    name: rabbit_local_test_data
