--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ RABBITMQ_HOST=localhost
 RABBITMQ_DEFAULT_PASS=rmqpassword
 RABBITMQ_DEFAULT_PORT=5672
 RABBITMQ_DEFAULT_USER=rmquser
+SERVER_URL=http://localhost:8000
