--- a/.env_compose
+++ b/.env_compose
@@ -9,3 +9,4 @@ RABBITMQ_HOST=rabbitmq
 RABBITMQ_DEFAULT_PASS=rmqpassword
 RABBITMQ_DEFAULT_PORT=5672
 RABBITMQ_DEFAULT_USER=rmquser
+SERVER_URL=http://web:8000
